--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "nunjucks": "^3.2.4",
     "nunjucks-in-yaml": "^1.0.4",
     "nunjucks-to-html": "^1.1.0",
-    "pdf-lib": "^1.17.1",
-    "puppeteer": "^23.5.1"
+    "pdf-lib": "^1.17.1"
   }
 }
