--- a/src/data/cv.yaml
+++ b/src/data/cv.yaml
@@ -21,7 +21,7 @@ summary:
   paragraphs:
   - Expert Accessibility Engineer with 5+ years in Web/Frontend Development, specializing
     in designing intuitive interfaces that prioritize user needs at the fundamental
-    principle in the development process—certified professional in accessibility core
+    principle in the development process-certified professional in accessibility core
     competencies (CPACC).
   - Demonstrates advanced proficiency in web technologies, including HTML, CSS, and
     JavaScript. Experiences in W3C standards, web accessibility specifications, and
