--- a/src/data/cv-general-ru.yaml
+++ b/src/data/cv-general-ru.yaml
@@ -14,8 +14,9 @@ personal:
 summary:
   title: Обо мне
   paragraphs:
-  - Product Designer с 14+ годами опыта в международных SaaS, EdTech, E-Commerce и FinTech компаниях. Специализируюсь на дизайне сложных B2B и B2C продуктов, проектировании дизайн-систем, исследованиях, стратегическом планировании, доступности и инклюзивном дизайне.
-  - Умею во фронтенд (HTML, JS, CSS, React), это позволяет быстрее создавать подходящий дизайн и говорить с командой на одном языке.
+  - Специализируюсь на дизайне сложных B2B и B2C продуктов, проектировании дизайн-систем, исследованиях, стратегическом планировании, доступности и инклюзивном дизайне.
+  - 14+ лет опыта в международных SaaS, EdTech, E-Commerce и FinTech компаниях. 
+  - Умею во фронтенд (HTML, JS, CSS, React), говорю с командой на одном языке.
 skills:
   title: Навыки
   skillset 1:
