content: update job title to Senior Product Designer

--- a/src/data/cv-general.yaml
+++ b/src/data/cv-general.yaml
@@ -14,7 +14,7 @@ personal:
 summary:
   title: Summary
   paragraphs:
-  - Product Designer with 14+ years of experience in international SaaS, EdTech, E-Commerce and FinTech companies.
+  - Senior Product Designer with 14+ years of experience in international SaaS, EdTech, E-Commerce and FinTech companies.
   - Specialising in complex B2B/B2C products, design systems, user research, accessibility and inclusive design. Passionate about solving complex problems and creating products that scale.
   - Working knowledge of frontend development (React, HTML, CSS, JavaScript) — enabling effective collaboration between design and development.
 skills:
